Fri Nov 29 11:55:41 2002  D A Hanvey  <d.hanvey@qub.ac.uk>

	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.h:

	  Fixed Segmentation fault.
	

Thu Nov 28 22:39:38 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp: 
	  Fixed warnings in builds where excetions are turned off.
	

Thu Nov 28 22:30:37 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OBV/TC_Alignment/client.cpp: Fixed errors and warnings in
	  builds where exceptions are turned off.

Thu Nov 28 14:45:43 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Bug_1361_Regression/Server_Thread_Pool.cpp (svc): 
	* tests/Bug_1361_Regression/Server_Thread_Pool.h:
	* tests/Bug_1361_Regression/shutdown.cpp: Fixed warnings and
	  compile errors.  

Thu Nov 28 07:57:12 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/Admin.h:
	* orbsvcs/orbsvcs/Notify/EventChannel.h:
	* orbsvcs/orbsvcs/Notify/EventChannelFactory.h:
	* orbsvcs/orbsvcs/Notify/Proxy.h: Added missing includes to
	  compile a bit better on VC 7.0. Thanks to Tommy Andreasen
	  <tommy.andreasen@radiometer.dk> for providing patches.

Thu Nov 28 07:40:16 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OBV/TC_Alignment/server.cpp: Fixed fuzz errors.

Thu Nov 28 07:03:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Any/client.bor:
        * tests/OBV/Any/server.bor:
          Fix errors in these bcb makefiles.

Wed Nov 27 22:31:34 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Bug_1361_Regression/Server_Thread_Pool.h:
	* tests/Bug_1361_Regression/Server_Thread_Pool.cpp: Converted the
	  usage of ACE_SYNCH_MUTEX to ACE_SYNCH. Missed that