@@ -69,17 +69,19 @@ ifndef TAO_ORBSVCS
       TAO_ORBSVCS += RTCORBAEvent
     endif #corba_messaging
 
+    # The PortableGroup library requires several methods in the POA,
+    # which are disabled by Minimum CORBA. Further it also needs AMI
+    # support 
     ifeq ($(ami),1)
+      TAO_ORBSVCS += PortableGroup
       ifeq ($(interceptors),1)
         # The Load Balancer requires AMI and Interceptor support.
         TAO_ORBSVCS += CosLoadBalancing
       endif #interceptors
     endif #ami
 
-    # The PortableGroup library requires several methods in the POA,
-    # which are disabled by Minimum CORBA.
-    TAO_ORBSVCS += PortableGroup \
-	ImplRepo
+
+    TAO_ORBSVCS += ImplRepo
 
   endif # minimum_corba
 
